--- a/TermProject_Template/Restuarant/ResturantAccountMaster.Master
+++ b/TermProject_Template/Restuarant/ResturantAccountMaster.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="MasterLogReg.master.cs" Inherits="TermProject_Template.MasterLogReg" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="ResturantAccountMaster.master.cs" Inherits="TermProject_Template.ResturantAccountMaster" %>
 
 <!DOCTYPE html>
 
@@ -19,9 +19,9 @@
             <div>
                 <ul>
                     <li><img class="imageT" src="images/Temple-T.png" /><a href="HomePage.aspx"></a></li>
-                    <li><a href="StudentFillData.aspx">View Resturants</a></li>
-                    <li><a href="AdminSearchStudents.aspx">Dashboard</a></li>
-                    <li><a href="Default.aspx">Cart</a></li>
+                    <li><a href="StudentFillData.aspx">Dashboard</a></li>
+                    <li><a href="AdminSearchStudents.aspx">View Orders</a></li>
+                    <li><a href="Default.aspx">Account Settings</a></li>
                 </ul>
             </div>
             <div>
@@ -36,3 +36,4 @@
     </form>
 </body>
 </html>
+
