--- a/TermProject_Template/Users/UsersMaster.Master
+++ b/TermProject_Template/Users/UsersMaster.Master
@@ -1,6 +1,6 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="UsersMaster.master.cs" Inherits="TermProject_Template.Users.UsersMaster" %>
 
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
@@ -10,7 +10,7 @@
     </title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
-    <link rel="stylesheet" type="text/css" href="CSS/main.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/main.css"/>
     <%--    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">--%>
 </head>
 <body>
@@ -18,12 +18,18 @@
         <div class="container">
             <div>
                 <ul>
-                    <li><img class="imageT" src="images/Temple-T.png" /><a href="HomePage.aspx"></a></li>
-                    <li><a href="StudentFillData.aspx">Dashboard</a></li>
+                    <li><img class="imageT" src="../images/Temple-T.png" /><a href="HomePage.aspx"></a></li>
+                    <li><a href="UserDashboard.aspx">Dashboard</a></li>
                 </ul>
             </div>
             <div>
                 <asp:ContentPlaceHolder ID="Content1" runat="server">
+                   
+                </asp:ContentPlaceHolder>
+                <asp:ContentPlaceHolder ID="Content2" runat="server">
+                   
+                </asp:ContentPlaceHolder>
+                <asp:ContentPlaceHolder ID="Content3" runat="server">
                    
                 </asp:ContentPlaceHolder>
             </div>
