--- a/TermProject_Template/LogRegRes/MasterLogReg.Master
+++ b/TermProject_Template/LogRegRes/MasterLogReg.Master
@@ -10,7 +10,7 @@
     </title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
-    <link rel="stylesheet" type="text/css" href="CSS/main.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/main.css" />
     <%--    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">--%>
 </head>
 <body>
@@ -18,8 +18,8 @@
         <div class="container">
             <div>
                 <ul>
-                    <li><img class="imageT" src="images/Temple-T.png" /><a href="HomePage.aspx"></a></li>
-                    <li>QuickEats</li>
+                    <li><img class="imageT" src="../images/Temple-T.png" /><a></a></li>
+                    <li style="padding-left: 20px;"><a>QuickEats</a></li>
                 </ul>
             </div>
             <div>
