--- a/TermProject_Template/CSS/style.css
+++ b/TermProject_Template/CSS/style.css
@@ -398,6 +398,19 @@ background-c
     padding-top: 20px;
 }
 
+.container-login102-form-btn {
+    width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-left: 17%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+}
+
 .login100-form-btn {
     font-family: Raleway-Bold;
     font-size: 16px;
