--- a/TermProject_Template/CSS/main.css
+++ b/TermProject_Template/CSS/main.css
@@ -216,6 +216,32 @@ body {
         background-color: #9D2235; /* Green */
         color: white;
     }
+
+.logButton1 {
+    background-color: #9D2235; /* Green */
+    border: none;
+    color: white;
+    padding: 16px 18px;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    background-color: white;
+    color: black;
+    border-radius: 2px;
+    border: 1px solid #9D2235;
+}
+
+    .logButton1:hover {
+        background-color: #9D2235; /* Green */
+        color: white;
+    }
+
 #forgotPage {
     padding-top: 19%;
     text-align: center;
