--- a/TermProject_Template/CSS/main.css
+++ b/TermProject_Template/CSS/main.css
@@ -115,7 +115,7 @@ body {
     border-radius: 3px;
 }
 .Settings {
-    position:absolute;
+    padding-top: 15%;
     margin:auto;
     width:100%;
 }
@@ -265,4 +265,12 @@ body {
 #forgotPage {
     padding-top: 19%;
     text-align: center;
+}
+
+.contentAlign{
+    margin-left: 10%;
+}
+
+.tblStyle {
+    font-family: Raleway-Medium;
 }
