--- a/TermProject_Template/CSS/style.css
+++ b/TermProject_Template/CSS/style.css
@@ -25,7 +25,6 @@
 [ RESTYLE TAG ]*/
 
 * {
-    padding: 0px;
     box-sizing: border-box;
     margin-left: 0px;
     margin-right: 0px;
@@ -222,6 +221,18 @@ background-c
     padding: 15px;
 }
 
+.container-login101 {
+    width: 100%;
+    min-height: 80vh;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
 
 .wrap-login100 {
     width: 560px;
@@ -238,6 +249,18 @@ background-c
     overflow-y: auto;
     margin-top: 5%;
     margin-bottom: 5%;
+}
+
+.wrap-login102 {
+    font-family: Raleway-Regular;
+    color: black;
+    background: #e6e6e6;
+    border-radius: 10px;
+    position: relative;
+    overflow-y: auto;
+    margin-bottom: 5%;
+    margin-left: 25%;
+    margin-right: 25%;
 }
 
 
