--- a/TermProject_Template/Restaurant/RestaurantAccountMaster.Master
+++ b/TermProject_Template/Restaurant/RestaurantAccountMaster.Master
@@ -19,7 +19,7 @@
             <div>
                 <ul>
                     <li><img class="imageT" src="../images/Temple-T.png" /><a href="HomePage.aspx"></a></li>
-                    <li><a href="StudentFillData.aspx">Dashboard</a></li>
+                    <li><a href="RestaurantDashboard.aspx">Dashboard</a></li>
                     <li><a href="CreateMenu.aspx">Create Menu</a></li>
                 </ul>
             </div>
