--- a/TermProject_Template/CSS/main.css
+++ b/TermProject_Template/CSS/main.css
@@ -280,16 +280,20 @@ table img{
     margin-left: 10%;
 }
 
-.tblStyle {
-    font-family: Raleway-Medium;
-}
-
 .gv {
     font-family: Raleway-Medium;
     margin-top: 5%;
     margin-left: auto;
     margin-right: auto;
     width: 1000px;
+    text-align: center;
+}
+
+.gv1 {
+    font-family: Raleway-Medium;
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px;
     text-align: center;
 }
 
@@ -316,3 +320,8 @@ table img{
         background-color: #9D2235;
         color: white;
     }
+
+.back2Dash{
+    margin-top: 5%;
+    margin-left: 36%;
+}
