--- a/TermProject_Template/CSS/style.css
+++ b/TermProject_Template/CSS/style.css
@@ -183,6 +183,14 @@ iframe {
     text-transform: uppercase;
 }
 
+.txt10 {
+    font-family: Raleway-SemiBold;
+    font-size: 18px;
+    color: #555555;
+    line-height: 1.4;
+    text-transform: uppercase;
+}
+
 .txt2 {
     font-family: Raleway-Regular;
     font-size: 13px;
@@ -231,6 +239,14 @@ background-c
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+}
+
+.wrap-login12 {
+    background: #e6e6e6;
+    border-radius: 10px;
+    position: relative;
+    margin-top: 3%;
+    margin-bottom: 5%;
 }
 
 .wrap-login10 {
@@ -314,6 +330,17 @@ background-c
     line-height: 1.2;
     text-transform: uppercase;
     text-align: left;
+    width: 100%;
+    display: block;
+}
+
+.login102-form-title {
+    font-family: Raleway-Medium;
+    font-size: 30px;
+    text-align: center;
+    color: black;
+    line-height: 1.2;
+    text-transform: uppercase;
     width: 100%;
     display: block;
 }
